WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87191
REGRESSION(
r116629
) tests for <style scoped> is crashing
https://bugs.webkit.org/show_bug.cgi?id=87191
Summary
REGRESSION(r116629) tests for <style scoped> is crashing
Hajime Morrita
Reported
2012-05-22 17:57:35 PDT
It's skipped for now. But it should get exercised.
Attachments
Patch
(6.33 KB, patch)
2012-05-22 18:31 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2012-05-22 18:05:26 PDT
They've been overlooked because no platform exercises them...
Hajime Morrita
Comment 2
2012-05-22 18:31:58 PDT
Created
attachment 143429
[details]
Patch
Hajime Morrita
Comment 3
2012-05-22 18:32:26 PDT
Kent-san, could you take a look?
Kent Tamura
Comment 4
2012-05-22 18:39:40 PDT
Comment on
attachment 143429
[details]
Patch ok
WebKit Review Bot
Comment 5
2012-05-22 21:27:12 PDT
Comment on
attachment 143429
[details]
Patch Clearing flags on attachment: 143429 Committed
r118118
: <
http://trac.webkit.org/changeset/118118
>
WebKit Review Bot
Comment 6
2012-05-22 21:27:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug