REGRESSION(r116629) tests for <style scoped> is crashing https://bugs.webkit.org/show_bug.cgi?id=87191

Source/WebCore:

Reviewed by Kent Tamura.

unregisterWithScopingNode() and registerWithScopingNode() doesn't follow
refactoring around removedFrom(), insertedInto() and willRemove().
This change aligns them to such recent changes.

No new tests. Covered by existing tests.

* html/HTMLStyleElement.cpp:
(WebCore::HTMLStyleElement::unregisterWithScopingNode)
(WebCore::HTMLStyleElement::insertedInto):
- Allowed registerWithScopingNode() only for in-document traversal.
  That is how it originally did.
(WebCore::HTMLStyleElement::removedFrom):
- Gave ex-parent to unregisterWithScopingNode().
* html/HTMLStyleElement.h:
(WebCore::HTMLStyleElement::unregisterWithScopingNode):
(HTMLStyleElement):

LayoutTests:

- Unskipped accidentally skipped test for <style scoped>.
- Updated outdated expectations.

Reviewed by Kent Tamura.

* fast/css/style-scoped/style-scoped-in-shadow-expected.txt:
* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/104934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118118 268f45cc-cd09-0410-ab3c-d52691b4dbfc